# learn_CMake

./: CMakeLists.txt  README.md
lesson1_1/: main.cpp
lesson1_2/: CMakeLists.txt
lesson2_1/: CMakeLists.txt  main.cpp
lesson2_2/: CMakeLists.txt  main.cpp
lesson2_2/add/: CMakeLists.txt  add.cpp  add.h  export.h
lesson3_1/: CMakeLists.txt  main.cpp
lesson3_1/add/: CMakeLists.txt
lesson3_1/calculator/: CMakeLists.txt  calculator.cpp
lesson3_1/common/: CMakeLists.txt  common.cpp
lesson3_1/sub/: CMakeLists.txt  sub.cpp
lesson4_1/: CMakeLists.txt  main.cpp
lesson4_1/add/: CMakeLists.txt  add.cpp
lesson4_1/calculator/: CMakeLists.txt  calculator.h
lesson4_1/common/: CMakeLists.txt  common.h
lesson4_1/sub/: CMakeLists.txt
lesson4_opencv/: CMakeLists.txt
